--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+ /* hide scrollbar  */
+html, body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
+}
