--- a/src/index.css
+++ b/src/index.css
@@ -181,3 +181,31 @@ body::-webkit-scrollbar {
         .animate-progress {
           animation: progress 2s ease-in-out infinite;
         }
+
+        /* login page  */
+           @keyframes gradient {
+          0%, 100% { background-position: 0% 50%; }
+          50% { background-position: 100% 50%; }
+        }
+        .animate-gradient {
+          background-size: 200% auto;
+          animation: gradient 3s ease infinite;
+        }
+        @keyframes fade-in {
+          from {
+            opacity: 0;
+            transform: scale(0.9);
+          }
+          to {
+            opacity: 1;
+            transform: scale(1);
+          }
+        }
+        .animate-fade-in {
+          animation: fade-in 0.6s ease-out;
+        }
+
+     
+   
+     
+     
